--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spitsyn website</title>
-    <link rel="stylesheet" href="/styles/styles.css">   
+    <link rel="stylesheet" href="styles/styles.css">   
 </head>
 <body>
     
@@ -47,7 +47,7 @@
 
 
             <div class="photo-container">
-                <img src="/images/logo.jpg" alt="logo">
+                <img src="images/logo.jpg" alt="logo">
 
 
             </div>
@@ -60,10 +60,10 @@
 
         <div class="stack-container">
 
-            <img src="/images/html.svg" alt="">
-            <img src="/images/css.svg" alt="">
-            <img src="/images/js.png" alt="">
-            <img src="/images/vue.svg" alt="">
+            <img src="images/html.svg" alt="">
+            <img src="images/css.svg" alt="">
+            <img src="images/js.png" alt="">
+            <img src="images/vue.svg" alt="">
 
 
 
